Fixing double scrollbars and gallery not rendering correctly the second time (#338)
* Fixing double scrollbars and gallery not rendering correctly the second time
* remove the flicker on close

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -356,6 +356,12 @@ main section but the first child, and the footer should be removed */
 body.gallery-active {
   overflow: hidden;
 
+  main {
+    height: calc(100vh - var(--header-height));
+    overflow-y: auto;
+  }
+
+
   main > *:not(:first-child),
   footer {
     display: none;
